tests/baselines/reference/illegalModifiersOnClassElements.errors.txt
illegalModifiersOnClassElements.ts(2,19): error TS1039: Initializers are not allowed in ambient contexts.
illegalModifiersOnClassElements.ts(3,5): error TS1031: 'export' modifier cannot appear on class elements of this kind.


==== illegalModifiersOnClassElements.ts (2 errors) ====
    class C {
        declare foo = 1;
                      ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
        export bar = 1;
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
    }